Add canvas to html with fallback text

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title>🕹️ Snake 🐍</title>
   </head>
   <body>
+    <h1>Snake</h1>
+    <canvas width="300" height="300">
+      A recreation of the classic retro game - snake.
+      <br />
+      Please use a device that supports javascript to play.
+    </canvas>
+
     <script src="index.js"></script>
   </body>
 </html>
