Begin canvas styling

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>🕹️ Snake 🐍</title>
   </head>
   <body>
-    <h1>Snake</h1>
-    <canvas width="300" height="300">
+    <h1>Snake: #1 retro game</h1>
+    <canvas width="450" height="450">
       A recreation of the classic retro game - snake.
       <br />
       Please use a device that supports javascript to play.
