Add semantic HTML elements, font and tweek css

--- a/index.html
+++ b/index.html
@@ -5,18 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
+      rel="stylesheet"
+    />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <title>Snake | Retro game online 🐍</title>
   </head>
   <body>
-    <h1>Snake: #1 retro game</h1>
-    <canvas width="460" height="460">
-      A recreation of the classic retro game - snake.
-      <br />
-      Please use a device that supports javascript to play.
-    </canvas>
-
+    <header>
+      <h1>Snake</h1>
+    </header>
+    <main>
+      <canvas width="460" height="460">
+        A recreation of the classic retro game - snake.
+        <br />
+        Please use a device that supports javascript to play.
+      </canvas>
+    </main>
     <script src="index.js"></script>
   </body>
 </html>
