Move files out of folder to fix deployment issue

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,13 +15,13 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="../media/favicon-32x32.png"
+      href="media/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="../media/favicon-16x16.png"
+      href="media/favicon-16x16.png"
     />
     <title>Snake | Retro game online 🐍</title>
   </head>
@@ -36,6 +36,6 @@
         Please use a device that supports javascript to play.
       </canvas>
     </main>
-    <script src="./index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
