--- a/index.html
+++ b/index.html
@@ -11,18 +11,8 @@
       href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="media/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="media/favicon-16x16.png"
-    />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png?" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png?" />
     <title>Snake | Retro game online 🐍</title>
   </head>
   <body>
