Add button and basic css

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   </head>
   <body>
     <header>
+      <button type="button" aria-label="sound toggle">
+        <img aria-hidden="true" src="sound.png" />
+      </button>
       <h1>Snake</h1>
     </header>
     <main>
