Move images into own folder

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <header>
       <button type="button" aria-label="sound toggle">
-        <img aria-hidden="true" src="sound.png" />
+        <img aria-hidden="true" src="images/sound.png" />
       </button>
       <h1>Snake</h1>
     </header>
